# simples

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
src/: lib.rs  simplify.rs  smooth.rs  util.rs
src/simplify/: mod.rs  rdp.rs  sample.rs  vw.rs
