[package]
name = "simples"
version = "0.1.1"
edition = "2021"
authors = ["Chris L Barnes <chrislloydbarnes@gmail.com>"]
documentation = "https://docs.rs/simples"
repository = "https://github.com/clbarnes/simples"
license-file = "LICENSE"
description = "N-dimensional linestring smoothing and simplification"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.31"

[dev-dependencies]
cargo-release = "0.22"

[package.metadata.release]
disable-publish = true
no-dev-version = true
